[gd_scene load_steps=19 format=3 uid="uid://csckx1dqx0ycd"]

[ext_resource type="Script" path="res://ui/Player/progress_bar_weather_state.gd" id="1_bll7w"]
[ext_resource type="Theme" uid="uid://dbmay2mk5b3eg" path="res://theme/theme_base.tres" id="1_soa6u"]
[ext_resource type="Script" path="res://ui/Player/h_box_storm_news_feed.gd" id="3_rxgmm"]
[ext_resource type="Script" path="res://ui/Player/weather_alert_timer.gd" id="4_dyjoc"]
[ext_resource type="Script" path="res://ui/Player/action_progress_bar.gd" id="5_nguav"]
[ext_resource type="Script" path="res://ui/Player/hbox_inventory_panel.gd" id="6_tu37j"]
[ext_resource type="Texture2D" uid="uid://b32kjjorkg1qr" path="res://ui/texture/mouse_left_outline.png" id="7_g5uy1"]
[ext_resource type="Script" path="res://ui/Player/icon_left_mouse_action.gd" id="7_q3n8y"]
[ext_resource type="Texture2D" uid="uid://cgos885q5ixlu" path="res://ui/texture/mouse_right_outline.png" id="8_l5dbw"]
[ext_resource type="Script" path="res://ui/Player/icon_right__mouse_action.gd" id="9_yl8ak"]
[ext_resource type="PackedScene" uid="uid://b2k34x1xpceq3" path="res://ui/Player/v_box_right_panel.tscn" id="11_rfqlh"]
[ext_resource type="Script" path="res://ui/Player/blackout_panel.gd" id="11_xo5xq"]
[ext_resource type="Script" path="res://ui/Player/control_alert.gd" id="13_ex4d2"]
[ext_resource type="PackedScene" uid="uid://dfa5w5xshjt3h" path="res://ui/Player/control_instructions.tscn" id="13_j7xyf"]
[ext_resource type="Script" path="res://ui/Player/pause_menu.gd" id="15_4kfjy"]
[ext_resource type="StyleBox" uid="uid://ywcampnpqpk1" path="res://theme/panel_transparent.tres" id="15_vqocm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2vg4"]
bg_color = Color(0.945098, 0.941176, 0.188235, 0.188235)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.945098, 0.945098, 0.188235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eth0m"]
bg_color = Color(0, 0, 0, 1)

[node name="CanvasUI" type="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 61.0
offset_top = 133.0
offset_right = 124.0
offset_bottom = -57.0
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_soa6u")

[node name="ProgressBar_WeatherState" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_e2vg4")
max_value = 11.0
fill_mode = 3
show_percentage = false
script = ExtResource("1_bll7w")

[node name="Label" type="Label" parent="VBoxContainer/ProgressBar_WeatherState"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "Storm"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/ProgressBar_WeatherState"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -47.0
offset_right = 20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Calm"
horizontal_alignment = 1

[node name="Control_TopCenter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 48.0
offset_right = 20.0
offset_bottom = 88.0
grow_horizontal = 2

[node name="Label_WeatherAlert" type="Label" parent="Control_TopCenter"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_top = -32.0
offset_right = 202.0
offset_bottom = 51.0
grow_horizontal = 2
theme = ExtResource("1_soa6u")
theme_override_font_sizes/font_size = 60
text = "Weather Alert"
horizontal_alignment = 1
script = ExtResource("3_rxgmm")

[node name="HBox_StormNewsFeed" type="HBoxContainer" parent="Control_TopCenter/Label_WeatherAlert"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -18.0
offset_right = 1306.0
offset_bottom = 97.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("1_soa6u")

[node name="VSeparator" type="VSeparator" parent="Control_TopCenter/Label_WeatherAlert/HBox_StormNewsFeed"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="Label_WeatherInfo" type="Label" parent="Control_TopCenter/Label_WeatherAlert/HBox_StormNewsFeed"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60

[node name="WeatherAlertTimer" type="VBoxContainer" parent="Control_TopCenter"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 62.0
offset_bottom = 40.0
grow_horizontal = 2
theme = ExtResource("1_soa6u")
script = ExtResource("4_dyjoc")

[node name="Label" type="Label" parent="Control_TopCenter/WeatherAlertTimer"]
layout_mode = 2
text = "Weather Alert Timer"

[node name="ProgressBar_WeatherAlertTimer" type="ProgressBar" parent="Control_TopCenter/WeatherAlertTimer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
show_percentage = false

[node name="Label_WeatherStateTimeLeft" type="Label" parent="Control_TopCenter/WeatherAlertTimer/ProgressBar_WeatherAlertTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.5
offset_right = 20.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
text = "0:17"
horizontal_alignment = 1

[node name="Control_Center" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ActionProgressBar" type="ProgressBar" parent="Control_Center" groups=["ActionProgressBar"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = -4.0
offset_right = 35.0
offset_bottom = 10.0
grow_horizontal = 2
show_percentage = false
script = ExtResource("5_nguav")

[node name="Control_BottomCenter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -63.0
offset_right = 20.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="HboxInventoryPanel" type="HBoxContainer" parent="Control_BottomCenter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -26.0
offset_right = 50.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_tu37j")

[node name="Icon_Left_Mouse_Action" type="VSeparator" parent="Control_BottomCenter/HboxInventoryPanel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
script = ExtResource("7_q3n8y")

[node name="VBoxContainer" type="VBoxContainer" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Left_Mouse_Action"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Left_Mouse_Action/VBoxContainer"]
modulate = Color(0.956863, 0.952941, 0.196078, 1)
layout_mode = 2
texture = ExtResource("7_g5uy1")
stretch_mode = 5

[node name="Label" type="Label" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Left_Mouse_Action/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dig"
horizontal_alignment = 1

[node name="Icon_Right__Mouse_Action" type="VSeparator" parent="Control_BottomCenter/HboxInventoryPanel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
script = ExtResource("9_yl8ak")

[node name="VBoxContainer" type="VBoxContainer" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Right__Mouse_Action"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Right__Mouse_Action/VBoxContainer"]
modulate = Color(0.945098, 0.945098, 0.188235, 1)
layout_mode = 2
texture = ExtResource("8_l5dbw")
stretch_mode = 5

[node name="Label2" type="Label" parent="Control_BottomCenter/HboxInventoryPanel/Icon_Right__Mouse_Action/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Buildings"
horizontal_alignment = 1

[node name="VBox_RightPanel" parent="." instance=ExtResource("11_rfqlh")]

[node name="BlackoutPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eth0m")
script = ExtResource("11_xo5xq")

[node name="Control_Alert" type="Control" parent="." groups=["Alert"]]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 52.0
offset_right = 20.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("13_ex4d2")

[node name="Label" type="Label" parent="Control_Alert"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -34.0
offset_right = 161.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Kennels don't take Llamas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control_Instructions" parent="." instance=ExtResource("13_j7xyf")]
modulate = Color(1, 1, 1, 0)
mouse_filter = 2

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("15_vqocm")
script = ExtResource("15_4kfjy")

[node name="TitlesContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -333.5
offset_top = 48.0
offset_right = 333.5
offset_bottom = 207.0
grow_horizontal = 2
theme_override_constants/separation = -25

[node name="Title" type="Label" parent="PauseMenu/TitlesContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 102
text = "Save the Animals"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="PauseMenu/TitlesContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Calm Before the Storm"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/TitlesContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="PauseMenu/TitlesContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="HSeparator2" type="HSeparator" parent="PauseMenu/TitlesContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="PauseMenu/TitlesContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="value_changed" from="Control_Center/ActionProgressBar" to="Control_Center/ActionProgressBar" method="_on_value_changed"]
[connection signal="pressed" from="PauseMenu/TitlesContainer/ContinueButton" to="PauseMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/TitlesContainer/MainMenuButton" to="PauseMenu" method="_on_main_menu_button_pressed"]
